Fixing form issue

--- a/public/form.html
+++ b/public/form.html
@@ -4,7 +4,7 @@
     <title>Contact Form - Label Ladder</title>
 </head>
 <body>
-    <!-- Скрытая форма для обнаружения Netlify -->
+    <!-- Hidden Netlify form -->
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
         <input type="text" name="firstName" />
         <input type="text" name="lastName" />
