Fixing form issue on Netlify

--- a/public/form.html
+++ b/public/form.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <!-- Hidden Netlify form -->
-    <form name="contact" action="/contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
+    <form name="contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
         <input type="text" name="firstName" />
         <input type="text" name="lastName" />
         <input type="email" name="email" />
